[gd_scene load_steps=6 format=3 uid="uid://dnpv3mexhv3bp"]

[ext_resource type="Script" path="res://scripts/gamemodes/multiplayer.gd" id="1"]
[ext_resource type="PackedScene" uid="uid://4wv8x42bqp3u" path="res://scenes/interface/pause_menu.tscn" id="2_7wwqv"]
[ext_resource type="PackedScene" uid="uid://b4kw0h7ym5iy1" path="res://scenes/interface/Lobby.tscn" id="3_eiy1x"]
[ext_resource type="PackedScene" uid="uid://dw7wr486ktdo8" path="res://scenes/interface/game_over_menu.tscn" id="4_4mhax"]
[ext_resource type="FontFile" uid="uid://caaahe23vg56r" path="res://assets/fonts/m5x7.ttf" id="5_e1ldr"]

[node name="multiplayer" type="Node2D"]
script = ExtResource("1")

[node name="ColorRect" type="ColorRect" parent="."]
offset_left = -1344.0
offset_top = -832.0
offset_right = 1344.0
offset_bottom = 704.0
color = Color(0, 0.235294, 0.341176, 1)

[node name="Camera2D" type="Camera2D" parent="."]
offset = Vector2(0, -64)
zoom = Vector2(0.5, 0.5)

[node name="pause_menu" parent="." instance=ExtResource("2_7wwqv")]
offset_left = -1344.0
offset_top = -832.0
offset_right = -1344.0
offset_bottom = -832.0
quit_target = ExtResource("3_eiy1x")

[node name="game_over_menu" parent="." instance=ExtResource("4_4mhax")]
offset_left = -1344.0
offset_top = -832.0
offset_right = -1344.0
offset_bottom = -832.0
quit_target = ExtResource("3_eiy1x")

[node name="line_counter" type="Label" parent="."]
z_index = 1
offset_right = 181.0
offset_bottom = 60.0
theme_override_fonts/font = ExtResource("5_e1ldr")
theme_override_font_sizes/font_size = 72
text = "Lines: 0"

[node name="start_timer" type="Timer" parent="."]

[node name="Label" type="Label" parent="."]
z_index = 1
offset_left = -80.0
offset_top = -256.0
offset_right = 112.0
offset_bottom = 152.0
theme_override_fonts/font = ExtResource("5_e1ldr")
theme_override_font_sizes/font_size = 512
